--- a/src/html/partials/process.html
+++ b/src/html/partials/process.html
@@ -12,6 +12,7 @@
                         <div class="process__step-content">
                             <h3 class="process__step-title">Консультация</h3>
                             <p class="process__step-text">Обсуждение ваших пожеланий, выбор проекта, расчёт стоимости</p>
+                            <p class="process__step-text process__step-text--phone">Оставляете заявку на сайте или по телефону <span class="process__step-phone" id="process-consultation-phone">+7 (111) 111-11-11</span></p>
                         </div>
                     </div>
                     <div class="process__step">
@@ -47,7 +48,7 @@
                         </div>
                         <div class="process__step-content">
                             <h3 class="process__step-title">Коробка</h3>
-                            <p class="process__step-text">Возведение стен, перекрытия, кровля</p>
+                            <p class="process__step-text">Возведение стен, перекрытия, кровля, установка дверей и окон</p>
                         </div>
                     </div>
                     <div class="process__step">
@@ -65,7 +66,7 @@
                         </div>
                         <div class="process__step-content">
                             <h3 class="process__step-title">Отделка</h3>
-                            <p class="process__step-text">Внутренняя и внешняя отделка, установка дверей и окон</p>
+                            <p class="process__step-text">Внутренняя и внешняя отделка</p>
                         </div>
                     </div>
                     <div class="process__step">
