--- a/src/html/partials/services.html
+++ b/src/html/partials/services.html
@@ -1,33 +1,80 @@
-<!-- SERVICES - Услуги (ипотека, участок, проектирование) -->
+<!-- SERVICES - Дополнительные услуги -->
         <!-- ============================================ -->
         <section class="services" id="services">
             <div class="services__container">
                 <h2 class="services__title">Дополнительные услуги</h2>
-                <p class="services__subtitle">Помогаем на всех этапах строительства</p>
                 <div class="services__grid">
                     <div class="services__card">
-                        <div class="services__card-icon">
-                            <img src="images/icons/icon-mortgage-document.png" alt="Ипотека" class="services__card-icon-img">
+                        <div class="services__card-image">
+                            <img src="images/services/service-mortgage.png" alt="Ипотека" class="services__card-img">
                         </div>
-                        <h3 class="services__card-title">Ипотека</h3>
-                        <p class="services__card-text">Помогаем оформить ипотеку на строительство дома. Работаем с ведущими банками. Выгодные процентные ставки и быстрая обработка заявок.</p>
-                        <button class="btn btn--primary">Узнать подробнее</button>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Ипотека</h3>
+                            <p class="services__card-text">Помогаем оформить ипотеку на строительство дома. Работаем с ведущими банками. Выгодные процентные ставки и быстрая обработка заявок.</p>
+                        </div>
                     </div>
                     <div class="services__card">
-                        <div class="services__card-icon">
-                            <img src="images/icons/icon-land-plot.png" alt="Подбор участка" class="services__card-icon-img">
+                        <div class="services__card-image">
+                            <img src="images/services/service-land-selection.png" alt="Подбор участка" class="services__card-img">
                         </div>
-                        <h3 class="services__card-title">Подбор участка</h3>
-                        <p class="services__card-text">Поможем найти и выбрать подходящий участок для строительства вашего дома. Учитываем все требования: расположение, коммуникации, рельеф.</p>
-                        <button class="btn btn--primary">Узнать подробнее</button>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Подбор участка</h3>
+                            <p class="services__card-text">Поможем найти и выбрать подходящий участок для строительства вашего дома. Учитываем все требования: расположение, коммуникации, рельеф.</p>
+                        </div>
                     </div>
                     <div class="services__card">
-                        <div class="services__card-icon">
-                            <img src="images/icons/icon-blueprint-design.png" alt="Проектирование" class="services__card-icon-img">
+                        <div class="services__card-image">
+                            <img src="images/services/service-design.png" alt="Проектирование" class="services__card-img">
                         </div>
-                        <h3 class="services__card-title">Проектирование</h3>
-                        <p class="services__card-text">Индивидуальное проектирование или адаптация типового проекта под ваши требования. Учитываем все пожелания и особенности участка.</p>
-                        <button class="btn btn--primary">Узнать подробнее</button>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Проектирование</h3>
+                            <p class="services__card-text">Индивидуальное проектирование или адаптация типового проекта под ваши требования. Учитываем все пожелания и особенности участка.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-roofing.png" alt="Кровельные работы" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Кровельные работы</h3>
+                            <p class="services__card-text">Предлагаем услуги по обустройству кровли из металлочерепицы по современной технологии. Крыша прослужит Вам долгие годы.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-foundation.png" alt="Фундамент для дома" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Фундамент для дома</h3>
+                            <p class="services__card-text">Полный комплекс услуг по закладке фундамента, включая проектирование, геологические изыскания, земляные работы.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-septic-tank.png" alt="Установка септиков" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Установка септиков</h3>
+                            <p class="services__card-text">Профессиональная установка септиков для эффективной и экологичной системы автономной канализации вашего дома.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-engineering-systems.png" alt="Монтаж инженерных систем" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Монтаж инженерных систем</h3>
+                            <p class="services__card-text">Профессиональный монтаж отопления, водоснабжения и котельных для комфортного и безопасного проживания в вашем доме.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-well-drilling.png" alt="Бурение скважин" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Бурение скважин</h3>
+                            <p class="services__card-text">Бурим скважины различного диаметра и глубины в любых типах грунта, а также подбираем и устанавливаем насосное оборудование.</p>
+                        </div>
                     </div>
                 </div>
             </div>
