--- a/src/css/components/process.css
+++ b/src/css/components/process.css
@@ -3,7 +3,7 @@
 /* ============================================ */
 
 .process {
-    padding: var(--spacing-xxl) var(--container-padding);
+    padding: var(--spacing-xl) var(--container-padding);
     background-color: var(--color-white);
 }
 
@@ -21,7 +21,7 @@
 
 .process__subtitle {
     text-align: center;
-    margin-bottom: var(--spacing-xxl);
+    margin-bottom: var(--spacing-lg);
     font-size: var(--font-size-lg);
     color: var(--color-gray);
 }
@@ -54,7 +54,7 @@
     display: flex;
     align-items: flex-start;
     gap: var(--spacing-lg);
-    margin-bottom: var(--spacing-xxl);
+    margin-bottom: var(--spacing-lg);
     padding-left: 0;
 }
 
